fixed the modal overflow problem

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1532,10 +1532,11 @@
 
 		.modal-dialog {
 	    position: relative;
-	    display: table; /* This is important */
+	    display: table;
 	    overflow-y: auto;
 	    overflow-x: auto;
 	    width: auto;
+			padding-bottom: 50px;
 		}
 
 		.downloadResumeButton {
